--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="sahasra.png" alt="my pic" style="width:140px;height:140px"></td>
         <td><h1>K.SAHASRA</h1>
           <p>Student at <strong>SRMIST KTR</strong></p>
-            <p>I love coffe and coding</p>
+            <p>I love coffee and coding</p>
               </td>
       </tr>
     </table>
