--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <h3><b>EDUCATION:</b></h3>
 <p> <em><ul>
   <li>SRM Institute of Science and Technology, Kattankulathur <ul>
-    <li>BTech / CSE with specialization in cloud computing| 2021 – 2025 li</li>
+    <li>BTech / CSE with specialization in cloud computing| 2021 – 2025 </li>
     <li>G.P.A: 10/10 (up to second semester)</li>
   </ul>
   </li>
@@ -61,7 +61,7 @@
 </ul> </em> </p>
 <h3>EXTRACURRICULAR:</h3>
 <p><em><ul>
-  <li>Corporate associate in Microsoft learn student ambassador</li>
+  <li>Corporate associate in Microsoft Learn Student Ambassador</li>
   <li>Part of the curation team in TedxSrmist</li>
   <li>Member of literature society SRM</li>
 </ul> </em> </p>
